--- a/favorites.html
+++ b/favorites.html
@@ -14,6 +14,17 @@
 	<table>
 		<tr>
 			<th>Table Element Head</th>
+		</tr>
+		<tr>
+			<th>First Name</th>
+			<th>Last Name</th>
+			<th>Favorite Animal</th>
+		</tr>
+		<tr>
+			<td>Ana</td>
+			<td>Curcija</td>
+			<td>Dog</td>
+		</tr>
 
 	</table>
 
