added my own favorite animal

--- a/favorites.html
+++ b/favorites.html
@@ -25,6 +25,11 @@
 			<td>Curcija</td>
 			<td>Dog</td>
 		</tr>
+		<tr>
+			<td>Jonathan</td>
+			<td>Harlem</td>
+			<td>Snow Leopard</td>
+		</tr>
 
 	</table>
 
