Added my (Lissa's) info to your table

--- a/favorites.html
+++ b/favorites.html
@@ -30,7 +30,11 @@
 			<td>Harlem</td>
 			<td>Snow Leopard</td>
 		</tr>
-
+		<tr>
+			<td>Lissa</td>
+			<td>Walzer</td>
+			<td>horse</td>
+		</tr>
 	</table>
 
 </body>
